syntax = "proto3";

option java_multiple_files = true;
option java_package = "ds.service2";
option java_outer_classname = "Service2Impl";

package service2;

// Interface exported by the server.
service bookingService {
  
  rpc service2_do(RequestMessage) returns (ResponseMessage) {}
    
}

message RequestMessage {
  string text = 1;  
}

message ResponseMessage {
  int32 length = 1;
}
