syntax = "proto3";


option java_multiple_files = true;
option java_package = "ca.railway.supportService3";
option java_outer_classname = "SupportServiceImpl";

package supportService3;

// Interface exported by the server.
service SupportService {

	rpc complaint(complaintMsg) returns (complaintConfirmation) {}
	
	rpc emergency(emergencyReportBool) returns (stream emergencyResponse) {}
	
}

message complaintMsg{
	string complaint = 1;
}

message complaintConfirmation{
	string reply = 1;
}

message emergencyReportBool{
	bool emergency = 1;
}

message emergencyResponse{
	string safetyDetails = 1;
	int32 policeNo = 2;
	int32 paramedicNo = 3;
}